--- a/source/form.html
+++ b/source/form.html
@@ -82,32 +82,34 @@
           <fieldset class="form__unit form__unit--contact">
             <legend class="form__title">Контактная информация:</legend>
 
-            <div class="form__introduction form__introduction--contact">
-              <label for="user-number">Контактный телефон*:</label>
-              <div class="form_contact-wrapper">
-                <input class="form__contact-number form__field" id="user-number" type="text" name="phone-number" placeholder="Введите телефон" required>
-                <div class="form_contact-image">
-                  <svg class="form_contact-image--phone" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18px" height="18px" viewBox="0 0 18 18" enable-background="new 0 0 18 18" xml:space="preserve">
-                    <g id="Page-1">
-                      <g id="Icons-Communication" transform="translate(-85.000000, -126.000000)">
-                        <g id="phone" transform="translate(85.000000, 126.000000)">
-                          <path id="Shape" fill="#010101" d="M3.6,7.8C5,10.6,7.4,12.9,10.2,14.4l2.2-2.2c0.3-0.3,0.699-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6 c0.6,0,1,0.4,1,1V17c0,0.6-0.4,1-1,1C7.6,18,0,10.4,0,1c0-0.6,0.4-1,1-1h3.5c0.6,0,1,0.4,1,1c0,1.2,0.2,2.4,0.6,3.6 c0.1,0.3,0,0.7-0.2,1L3.6,7.8L3.6,7.8z"/>
+            <div class="form__introduction-wrapper">
+              <div class="form__introduction form__introduction--contact">
+                <label for="user-number"><span class="form__contact-hide">Контактный</span> телефон*:</label>
+                <div class="form__contact-wrapper">
+                  <input class="form__contact-number form__field" id="user-number" type="text" name="phone-number" placeholder="Введите телефон" required>
+                  <div class="form__contact-image">
+                    <svg class="form__contact-image--phone" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18px" height="18px" viewBox="0 0 18 18" enable-background="new 0 0 18 18" xml:space="preserve">
+                      <g id="Page-1">
+                        <g id="Icons-Communication" transform="translate(-85.000000, -126.000000)">
+                          <g id="phone" transform="translate(85.000000, 126.000000)">
+                            <path id="Shape" fill="#010101" d="M3.6,7.8C5,10.6,7.4,12.9,10.2,14.4l2.2-2.2c0.3-0.3,0.699-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6 c0.6,0,1,0.4,1,1V17c0,0.6-0.4,1-1,1C7.6,18,0,10.4,0,1c0-0.6,0.4-1,1-1h3.5c0.6,0,1,0.4,1,1c0,1.2,0.2,2.4,0.6,3.6 c0.1,0.3,0,0.7-0.2,1L3.6,7.8L3.6,7.8z"/>
+                          </g>
                         </g>
                       </g>
-                    </g>
-                  </svg>
+                    </svg>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="form__introduction form__introduction--contact">
-              <label for="user-email">Электронная почта*:</label>
-              <div class="form_contact-wrapper">
-                <input class="form__contact-email form__field" id="user-email" type="text" name="email" placeholder="Введите e-mail" required>
-                <div class="form_contact-image">
-                  <svg class="form_contact-image--email" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
-                    <path d="M8,10c-0.266,0-0.5-0.094-1-0.336L0,6v7c0,0.55,0.45,1,1,1h14c0.55,0,1-0.45,1-1V6L9,9.664C8.5,9.906,8.266,10,8,10z M15,2 H1C0.45,2,0,2.45,0,3v0.758l8,4.205l8-4.205V3C16,2.45,15.55,2,15,2z"/>
-                  </svg>
+              <div class="form__introduction form__introduction--contact">
+                <label for="user-email">Электронная почта*:</label>
+                <div class="form__contact-wrapper">
+                  <input class="form__contact-email form__field" id="user-email" type="text" name="email" placeholder="Введите e-mail" required>
+                  <div class="form__contact-image">
+                    <svg class="form__contact-image--email" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
+                      <path d="M8,10c-0.266,0-0.5-0.094-1-0.336L0,6v7c0,0.55,0.45,1,1,1h14c0.55,0,1-0.45,1-1V6L9,9.664C8.5,9.906,8.266,10,8,10z M15,2 H1C0.45,2,0,2.45,0,3v0.758l8,4.205l8-4.205V3C16,2.45,15.55,2,15,2z"/>
+                    </svg>
 
+                  </div>
                 </div>
               </div>
             </div>
@@ -116,7 +118,7 @@
           <fieldset class="form__unit form__unit--imprassion">
             <legend class="form__title">Ваше общее впечатление:</legend>
 
-            <ul>
+            <ul class="form__impression-wraper">
               <li class="form__impression">
                 <input type="radio" name="grid" value="positive" id="positive" checked class="visually-hidden form__input form__input--radio">
                 <label for="positive" class="form__text">
@@ -172,7 +174,7 @@
             <legend class="form__title" for="user-emotion">Опишите свои эмоции:</legend>
             <textarea class="form__text-field" name="comment" id="user-emotion" rows="6" placeholder="Опишите подробно все свои восторги"></textarea>
             <div class="form__button-wrapper">
-              <button type="submit" class="form__button button">Отправить отзыв</button>
+              <input type="submit" class="form__button button" value="Отправить отзыв">
               <div class="form__coment">* — обязательные поля</div>
             </div>
 
