--- a/source/photo.html
+++ b/source/photo.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Sedona</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/style.min.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet"> -->
     <script src="js/picturefill.js"></script>
 
   </head>
@@ -157,7 +157,41 @@
             </div>
           </li>
         </ul>
+      </section>
 
+      <section class="video">
+        <h2 class="video__title">Все еще сомневаетесь?</h2>
+        <p class="video__title-description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+
+        <a href="#">
+          <picture>
+            <source type="image/webp" media="(min-width: 1200px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
+
+            <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+            <img class="video__img" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" width="321" height="201" alt="Видео города">
+          </picture>
+        </a>
+
+        <div class="video__setting">
+          <div class="video__play">
+            <div class="video__scale"></div>
+            <div class="video__toggle"></div>
+          </div>
+          <div class="video__setting-wrapper">
+            <div class="video__replay">
+              <svg class="video__replay-icon" width="16" height="20"><use xlink:href="img/sprite.svg#icon-video-replay" aria-label="Кнопка повторить"></use></svg>
+            </div>
+            <div class="video__subtitles">
+              <svg class="video__subtitles-icon" width="32" height="20"><use xlink:href="img/sprite.svg#icon-video-subtitles" aria-label="Кнопка субтитры"></use></svg>
+            </div>
+            <div class="video__fullscreen">
+              <svg class="video__fullscreen-icon" width="20" height="20"><use xlink:href="img/sprite.svg#icon-video-fullscreen" aria-label="Кнопка полный экран"></use></svg>
+            </div>
+          </div>
+        </div>
       </section>
 
     </main>
